--- a/sass/components/_drop-down.scss
+++ b/sass/components/_drop-down.scss
@@ -6,11 +6,13 @@
     padding-bottom: 3.9rem;
     border-top: 2px solid $color-very-light-grey;
     background-color: $color-white;
+    font-size: 16px;
+    line-height: 1.3;
 
     // header dropdown animation
     animation-name: header-dropdown;
-    animation-duration: .6s;
-    animation-timing-function: ease-out;
+    animation-duration: .5s;
+    animation-timing-function: linear;
 
     @include respond(phone-land) {
         display: none;
@@ -31,8 +33,6 @@
     }
 
     &__link {
-        font-size: $font-size-md;
-        line-height: 1.345;
         width: max-content;
         color: $color-black;
         @include hoverOnLink;
@@ -63,7 +63,7 @@
             background-position: center;
             display: inline-block;
             width: 10px;
-            height: 10px;
+            height: 100%;
             position: absolute;
             top: 0;
             right: 0;
