--- a/sass/components/main_components/_main-menu.scss
+++ b/sass/components/main_components/_main-menu.scss
@@ -1,40 +1,49 @@
 .main__menu {
   flex: 0 0 21.0102489019%;
   margin: 0 1.9rem 0 8rem;
-  border-radius: 1.2rem;
+  border-radius: 10px;
+  max-height: 450px;
+  font-size: 16px;
+  line-height: 1.3;
 
   background-color: $color-white;
-  font-size: 1.4rem;
 
   @include respond(tab-port) {
     display: none;
   }
 
+  @include respond(big-desktop) {
+    font-size: 16px;
+  }
+
   &-layout {
-    padding: 4rem 3rem;
-    height: 100%;
+    padding: 40px 30px;
 
     &-unit {
       display: flex;
       justify-content: space-between;
 
-      line-height: 1.8rem;
+      line-height: 1.3;
       position: relative;
 
       &:not(:last-child) {
         margin-bottom: 1.2rem;
       }
 
-      &::after {
+      &>::after {
         content: '';
         background-image: url("data:image/svg+xml,%3Csvg version='1.1' xmlns='http://www.w3.org/2000/svg' width='20' height='20' viewBox='0 0 20 20'%3E%3Ctitle%3Echeveron-right%3C/title%3E%3Cpath fill='%23d0d0d0' d='M12.95 10.707l0.707-0.707-5.657-5.657-1.414 1.414 4.242 4.243-4.242 4.243 1.414 1.414 4.95-4.95z'%3E%3C/path%3E%3C/svg%3E%0A");
         background-repeat: no-repeat;
         background-position: center;
+        display: inline-block;
         width: 10px;
-        height: 10px;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        right: 0;
       }
 
-      &:hover::after {
+      &>:hover::after {
         filter: invert(45%) sepia(64%) saturate(1663%) hue-rotate(336deg) brightness(102%) contrast(104%);
       }
     }
