--- a/sass/components/main_components/_main-swiper.scss
+++ b/sass/components/main_components/_main-swiper.scss
@@ -1,7 +1,8 @@
 .main__swiper {
   flex: 0 0 65.8125915081%;
   margin-right: 8rem;
-  border-radius: 1.2rem;
+  border-radius: 10px;
+  max-height: 450px;
   overflow: hidden;
 
   @include respond(tab-port) {
@@ -13,7 +14,7 @@
   &--slide {
     text-align: center;
     width: 100%;
-    width: 100%;
+    height: 100%;
 
     img {
       width: 100%;
