--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -9,7 +9,8 @@
   z-index: 99;
   background-color: $color-white;
   box-shadow: 0 1px 3px -2px gray;
-  transition: all 0.4s ease-in-out; // Add a transition effect (when scrolling) 
+  transition: top 0.3s ease-in-out;
+
 
   @include respond(phone-land) {
     display: none;
