--- a/sass/layout/_section-about.scss
+++ b/sass/layout/_section-about.scss
@@ -1,35 +1,47 @@
 .section-about {
   display: flex;
   justify-content: space-between;
-  align-items: center;
-  margin-top: 7.9rem;
+  max-width: 90.48316251830161%;
+  margin: 7.9rem 0 9rem 0;
+
+  @include respond(tab-port) {
+    max-width: 100%;
+    margin: 25px 0 30px 0;
+  }
+
+  @include respond(big-desktop) {
+    margin: 79px 0 90px 0;
+  }
+
 
   &__logo {
-    flex: 0 0 45.6808199122%;
-    margin-left: 5rem;
+    flex: 0 0 50.52631578947368%;
     position: relative;
+    margin-left: 5rem;
 
     img {
-      width: 100%;
-      height: auto;
+      @include resImgNM;
+      height: 100%;
     }
 
-    @include respond(phone-land) {
+    @include respond(tab-port) {
       display: none;
     }
   }
 
   &__caption {
-    flex: 0 0 42.89897511%;
-    margin-right: 8.1rem;
+    flex: 0 0 48.01619433198381%;
+    align-self: flex-end;
+    margin-left: 19px;
+    font-size: 16px;
 
-    @include respond(phone-land) {
-      flex: 0 0 88.140556369%;
+    @include respond(tab-port) {
+      flex: 0 0 92%;
       margin: 0 auto;
-
-      .paragraph {
-        font-size: $font-size-huge;
-      }
     }
+  }
+
+  &__title {
+    margin-bottom: 4rem;
   }
 }
