--- a/css/style.css
+++ b/css/style.css
@@ -526,7 +526,7 @@ body {
   left: 0;
   z-index: 99;
   background-color: #fff;
-  box-shadow: 0 1px 3px -2px gray;
+  box-shadow: 0 .1px 3px -2px gray;
   transition: top 0.3s ease-in-out; }
   @media (max-width: 48em) {
     .header {
