--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -8,7 +8,7 @@
   left: 0;
   z-index: 99;
   background-color: $color-white;
-  box-shadow: 0 1px 3px -2px gray;
+  box-shadow: 0 .1px 3px -2px gray;
   transition: top 0.3s ease-in-out;
 
 
