--- a/sass/base/_animation.scss
+++ b/sass/base/_animation.scss
@@ -1,14 +1,17 @@
 // Header Dropdown
 @keyframes header-dropdown {
     0% {
-        transform: translateY(-4rem);
+        transform: translateY(-10rem);
+        opacity: 0;
     }
 
     80% {
         transform: translateY(1.5rem);
+        opacity: 0.6;
     }
 
     100% {
         transform: translateY(0);
+        opacity: 1;
     }
 }
